# visual-excuses

./: .gitignore  CONTRIBUTING.md  README.md  conftest.py  latest-excuses.sh  main.py  pyproject.toml  setup.cfg  update-data.sh  visual-excuses.py
.github/workflows/: pylint.yml  python-tests.yml
samples/: update_excuses.yaml.xz  update_excuses_light.yaml.xz
snap/: snapcraft.yaml
tests/: test_excuse.py  test_stress_excuses.py  test_ubuntu_excuses.py  test_ubuntu_excuses_loader.py  test_ubuntu_teams.py  test_utils.py  test_yaml_parser.py
visual_excuses/: argparser.py  config.py  const.py  custom_types.py  errors.py  excuse.py  excuses_cache.py  excuses_filter.py  excuses_parser.py  logger.py  main.py  packages_by_team.py  pyvis_visual.py  table_visual.py  ubuntu_excuses.py  ubuntu_excuses_cli.py  ubuntu_excuses_loader.py  ubuntu_teams.py  utils.py  visual_excuses.py  visual_excuses_cmd.py  yaml_parser.py
