[metadata]
name = visual_excuses
version = 0.4
description =   Visual Graph Representation of Ubuntu Archive Proposed Migration Status
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mclemenceau/visual-excuses
project_urls =
    Bug Reports = https://github.com/mclemenceau/visual-excuses/issues
    Source Code = https://github.com/mclemenceau/visual-excuses
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pyyaml
	requests
    pyvis >= 0.3.2

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    visual-excuses = visual_excuses.main:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = visual_excuses
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
